<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/proper_black"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <!-- Arrow -->
    <Button
        android:id="@+id/login_back_btn"
        android:layout_width="40dp"
        android:layout_height="60dp"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login_title"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <!-- LOGIN TITLE/APP_TITLE -->

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login_title"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/login_email"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintVertical_chainStyle="packed" />

    <!--Email Text Field-->
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/str_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/faded_white"
        app:boxBackgroundColor="@color/grey"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/bez"
        app:endIconContentDescription="Email"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:startIconDrawable="@drawable/ic_baseline_person_login"
        app:startIconTint="@color/white"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_password"
        android:textColorHint="@color/faded_white"
        app:boxBackgroundColor="@color/grey"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/bez"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/white"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="textPassword"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>



    <!-- LOGIN BUTTON -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_btn"
        android:textAllCaps="false"

        app:backgroundTint="@color/darker_blue"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@id/login_forgot"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        tools:layout_editor_absoluteX="16dp" />

    <!-- Forgot password button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_forgot"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/pale_orange"
        android:backgroundTint="@color/grey"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="4dp"
        android:text="@string/login_forgot"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn" />


    <!-- Create ACC button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textColor="@color/pale_orange"
        android:backgroundTint="@color/grey"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot" />


</androidx.constraintlayout.widget.ConstraintLayout>