<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/proper_black"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"

    >
    <!-- Arrow -->
    <ImageView
        android:id="@+id/login_linear_back_btn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:padding="12dp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />




    <!-- LOGIN TITLE/APP_TITLE -->

    <TextView
        android:id="@+id/login_linear_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/login_linear_title"
        android:textColor="@color/bez"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/login_linear_username"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
    <!--Email Text Field-->
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/login_linear_username"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/login_linear_edit_username"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/bez"
        app:endIconContentDescription="Email"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/login_linear_password"
        app:layout_constraintTop_toBottomOf="@id/login_linear_title"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/white"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_linear_username_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_linear_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_linear_edit_password"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/bez"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/login_linear_login"
        app:layout_constraintTop_toBottomOf="@id/login_linear_username"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/white"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_linear_password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:inputType="textPassword"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>



    <!-- LOGIN BUTTON -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_linear_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/login_linear_btn"
        android:textAllCaps="false"

        app:backgroundTint="@color/neo_blue"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@id/login_linear_forgot"
        app:layout_constraintTop_toBottomOf="@id/login_linear_password"
        tools:layout_editor_absoluteX="16dp" />

    <!-- Forgot password button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_linear_forgot"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/login_linear_forgot"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_linear_login" />


    <!-- Create ACC button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_linear"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_linear_forgot" />


</androidx.constraintlayout.widget.ConstraintLayout>