<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/proper_black"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">



    <!--BACK_ARROW BUTTON -->

    <ImageView
        android:id="@+id/register_back_btn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="start"
        android:padding="12dp"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <!-- Register_Title/APP_TITLE -->

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/create_new_account"
        android:textColor="@color/bez"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/register_username"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintVertical_chainStyle="packed" />

    <!--username Text Field-->
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/register_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/str_username"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/bez"
        app:endIconContentDescription="Email"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title"
        app:startIconDrawable="@drawable/ic_baseline_person_login"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_username_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Email Text Field-->
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/register_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="textEmailAddress"
        android:hint="@string/str_email"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/bez"
        app:endIconContentDescription="Email"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_username"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Text Field -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_password"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/bez"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/verify_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="textPassword"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Register BUTTON -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_title"
        android:textAllCaps="false"

        app:backgroundTint="@color/neo_blue"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@id/already_acc_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_password" />

    <!-- Already_ACC BUTTON -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/already_acc_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/grey"
        android:textColor="@color/bez"
        android:text="@string/register_verify"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_btn" />

    <!-- CONFIRM PASSWORD FIELD -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/verify_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/dark_blue"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:boxStrokeColor="@color/bez"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:passwordToggleEnabled="true"
        app:startIconTint="@color/white">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/verify_password_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>